--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "18.2.0",
     "react": "18.2.0",
+    "react-dom": "^19.2.3",
     "react-router-dom": "6.22.3",
     "framer-motion": "11.0.8"
   },
